added fake data load reg2

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -132,7 +132,6 @@ different lines could be drawn through the data points.
 Some plausible examples are shown in Figure \@ref(fig:08-several-lines).
 
 ```{r 08-several-lines, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5,  fig.cap = "Scatter plot of sale price versus size with many possible lines that could be drawn through the data points"}
-
 small_plot +
   geom_abline(intercept = -64542.23, slope = 190, color = "green") +
   geom_abline(intercept = -6900, slope = 175, color = "purple") +
@@ -174,7 +173,7 @@ Sacramento real estate data set.
 > So you can standardize if you want&mdash;it won't hurt anything&mdash;but if you leave the
 > predictors in their original form, the best fit coefficients are usually easier to interpret afterward.
 
-As usual, we start by putting some test data away in a lock box that we
+As usual, we start by loading packages, setting the seed, loading data, and putting some test data away in a lock box that we
 can come back to after we choose our final model. Let's take care of that now.
 
 ```{r 08-test-train-split}
@@ -182,6 +181,8 @@ library(tidyverse)
 library(tidymodels)
 
 set.seed(1234)
+
+sacramento <- read_csv("data/sacramento.csv")
 
 sacramento_split <- initial_split(sacramento, prop = 0.6, strata = price)
 sacramento_train <- training(sacramento_split)
