hidden seeds in clustering

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -103,6 +103,9 @@ penguin_data <- data |> select(flipper_length_scaled, bill_length_scaled)
 
 ```{r 10-clustering, warning = F, message=F}
 library(tidyverse)
+
+set.seed(1)
+
 penguin_data
 ```
 
@@ -479,13 +482,16 @@ scaled_data
 To perform K-means clustering in R, we use the `kmeans` function. \index{K-means!kmeans function} It takes at
 least two arguments: the data frame containing the data you wish to cluster,
 and K, the number of clusters (here we choose K = 3). Note that since the K-means
-algorithm uses a random initialization of assignments, we need to set the random
-seed to make the clustering reproducible.
+algorithm uses a random initialization of assignments, but since we set the random seed
+earlier, the clustering will be reproducible.
 \index{seed!set.seed}
 \index{random seed|see{seed}}
 
-```{r 10-kmeans}
+```{r 10-kmeans-seed, echo = FALSE, warning = FALSE, message = FALSE}
+# hidden seed
 set.seed(1)
+```
+```{r 10-kmeans}
 penguin_clust <- kmeans(scaled_data, centers = 3)
 penguin_clust
 ```
