hidden seeds in inference

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -139,6 +139,8 @@ airbnb <- airbnb |>
 ```{r load-airbnb, message = FALSE, warning = FALSE}
 library(tidyverse)
 
+set.seed(123)
+
 airbnb <- read_csv("data/listings.csv")
 airbnb
 ```
@@ -184,10 +186,13 @@ package \index{infer} to take the sample. The arguments of `rep_sample_n` are (1
 sample from, and (2) the size of the sample to take.
 \index{seed!set.seed}
 
+```{r 11-example-proportions3-seed, echo = FALSE, message = FALSE, warning = FALSE}
+# hidden seed
+set.seed(123)
+```
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
 library(infer)
 
-set.seed(123)
 sample_1 <- rep_sample_n(tbl = airbnb, size = 40)
 airbnb_sample_1 <- summarize(sample_1,
   n = sum(room_type == "Entire home/apt"),
@@ -205,8 +210,11 @@ refer to it as a **point estimate**.  And second, since the sample was random,
 if we were to take *another* random sample of size 40 and compute the proportion for that sample,
 we would not get the same answer:
 
-```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
+```{r 11-example-proportions4-seed, echo = FALSE, message = FALSE, warning = FALSE}
+# hidden seed
 set.seed(1234)
+```
+```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
 sample_2 <- rep_sample_n(airbnb, size = 40)
 airbnb_sample_2 <- summarize(sample_2,
   n = sum(room_type == "Entire home/apt"),
