moved faithful images to img folder

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -683,23 +683,28 @@ faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
 
 faithful_plot
 
-ggsave("faithful_plot.png", faithful_plot)
-ggsave("faithful_plot.jpg", faithful_plot)
-ggsave("faithful_plot.bmp", faithful_plot)
-ggsave("faithful_plot.tiff", faithful_plot)
-ggsave("faithful_plot.svg", faithful_plot)
+ggsave("img/faithful_plot.png", faithful_plot)
+ggsave("img/faithful_plot.jpg", faithful_plot)
+ggsave("img/faithful_plot.bmp", faithful_plot)
+ggsave("img/faithful_plot.tiff", faithful_plot)
+ggsave("img/faithful_plot.svg", faithful_plot)
 
-print(paste("PNG filesize: ", file.info("faithful_plot.png")["size"] / 1000000, "MB"))
-print(paste("JPG filesize: ", file.info("faithful_plot.jpg")["size"] / 1000000, "MB"))
-print(paste("BMP filesize: ", file.info("faithful_plot.bmp")["size"] / 1000000, "MB"))
-print(paste("TIFF filesize: ", file.info("faithful_plot.tiff")["size"] / 1000000, "MB"))
-print(paste("SVG filesize: ", file.info("faithful_plot.svg")["size"] / 1000000, "MB"))
+print(paste("PNG filesize: ", file.info("img/faithful_plot.png")["size"] / 1000000, "MB"))
+print(paste("JPG filesize: ", file.info("img/faithful_plot.jpg")["size"] / 1000000, "MB"))
+print(paste("BMP filesize: ", file.info("img/faithful_plot.bmp")["size"] / 1000000, "MB"))
+print(paste("TIFF filesize: ", file.info("img/faithful_plot.tiff")["size"] / 1000000, "MB"))
+print(paste("SVG filesize: ", file.info("img/faithful_plot.svg")["size"] / 1000000, "MB"))
 ```
-Wow, that's quite a difference! Notice that for such a simple plot with few graphical elements (points), the vector graphics format (SVG) is over 100 
-times smaller than the uncompressed raster images (BMP, TIFF). Also, note that the JPG format is twice as large as the PNG format since the JPG
-compression algorithm is designed for natural images (not plots). Below, we also show what the images look like when we zoom in to a rectangle with only 3 data points.
-You can see why vector graphics formats are so useful: because they're just based on mathematical formulas, vector graphics can be scaled up to arbitrary sizes.
-This makes them great for presentation media of all sizes, from papers to posters to billboards.
+Wow, that's quite a difference! Notice that for such a simple plot with few
+graphical elements (points), the vector graphics format (SVG) is over 100 times
+smaller than the uncompressed raster images (BMP, TIFF). Also, note that the
+JPG format is twice as large as the PNG format since the JPG compression
+algorithm is designed for natural images (not plots). Below, we also show what
+the images look like when we zoom in to a rectangle with only 3 data points.
+You can see why vector graphics formats are so useful: because they're just
+based on mathematical formulas, vector graphics can be scaled up to arbitrary
+sizes.  This makes them great for presentation media of all sizes, from papers
+to posters to billboards.
 
 
 ```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="230pt", out.height="200pt", fig.align= "center", message =F}
