indices in classification and regression

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -23,7 +23,7 @@ By the end of the chapter, readers will be able to:
 Sometimes our classifier might make the wrong prediction. A classifier does not
 need to be right 100\% of the time to be useful, though we don't want the
 classifier to make too many wrong predictions. How do we measure how "good" our
-classifier is? Let's revisit the 
+classifier is? Let's revisit the \index{breast cancer}
 [breast cancer images example](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29)
 and think about how our classifier will be used in practice. A biopsy will be
 performed on a *new* patient's tumor, the resulting image will be analyzed,
@@ -33,7 +33,7 @@ accurate predictions on data *not seen during training*. But then, how can we
 evaluate our classifier without visiting the hospital to collect more
 tumor images? 
 
-The trick is to split the data into a **training set** and **test set** (Figure \@ref(fig:06-training-test))
+The trick is to split the data into a **training set** \index{training set} and **test set** \index{test set} (Figure \@ref(fig:06-training-test))
 and use only the **training set** when building the classifier.
 Then to evaluate the accuracy of the classifier, we first set aside the true labels from the **test set**,
 and then use the classifier to predict the labels in the **test set**. If our predictions match the true
@@ -41,7 +41,7 @@ labels for the observations in the **test set**, then we have some
 confidence that our classifier might also accurately predict the class
 labels for new observations without known class labels.
 
-> Note: if there were a golden rule of machine learning, it might be this: 
+> Note: if there were a golden rule of machine learning, \index{golden rule of machine learning} it might be this: 
 > *you cannot use the test data to build the model!* If you do, the model gets to
 > "see" the test data in advance, making it look more accurate than it really
 > is. Imagine how bad it would be to overestimate your classifier's accuracy
@@ -53,7 +53,7 @@ knitr::include_graphics("img/training_test.jpeg")
 
 How exactly can we assess how well our predictions match the true labels for
 the observations in the test set? One way we can do this is to calculate the
-**prediction accuracy**. This is the fraction of examples for which the
+**prediction accuracy**. \index{prediction accuracy|see{accuracy}}\index{accuracy} This is the fraction of examples for which the
 classifier made the correct prediction. To calculate this we divide the number
 of correct predictions by the number of predictions made. 
 
@@ -72,7 +72,7 @@ knitr::include_graphics("img/ML-paradigm-test.png")
 
 ## Randomness and seeds {#randomseeds}
 Beginning in this chapter, our data analyses will often involve the use
-of *randomness*. We use randomness any time we need to make a decision in our
+of *randomness*. \index{random} We use randomness any time we need to make a decision in our
 analysis that needs to be fair, unbiased, and not influenced by human input.
 For example, in this chapter, we need to split
 a data set into a training set and test set to evaluate our classifier. We 
@@ -84,19 +84,20 @@ in many other ways, e.g., to help us select a small subset of data from a larger
 to pick groupings of data, and more.
 
 However, the use of randomness runs counter to one of the main 
-tenets of good data analysis practice: *reproducibility*. Recall that a reproducible
+tenets of good data analysis practice: \index{reproducible} *reproducibility*. Recall that a reproducible
 analysis produces the same result each time it is run; if we include randomness
 in the analysis, would we not get a different result each time?
 The trick is that in R&mdash;and other programming languages&mdash;randomness 
 is not actually random! Instead, R uses a *random number generator* that
 produces a sequence of numbers that
-are completely determined by a *seed value*. Once you set the seed value 
-using the `set.seed` function, everything after that point may *look* random,
+are completely determined by a \index{seed} \index{random seed|see{seed}}
+ *seed value*. Once you set the seed value 
+using the \index{seed!set.seed} `set.seed` function, everything after that point may *look* random,
 but is actually totally reproducible. As long as you pick the same seed
 value, you get the same result!
 
 Let's use an example to investigate how seeds work in R. Say we want 
-to randomly pick 10 numbers from 0 to 9 in R using the `sample` function,
+to randomly pick 10 numbers from 0 to 9 in R using the `sample` \index{sample!function} function,
 but we want it to be reproducible. Before using the sample function,
 we call `set.seed`, and pass it any integer as an argument. 
 Here, we pass in the number `1`.
@@ -159,13 +160,13 @@ In the remainder of the textbook, we will set the seed once at the beginning of 
 
 ## Evaluating accuracy with `tidymodels`
 Back to evaluating classifiers now!
-In R, we can use the `tidymodels` package not only to perform $K$-nearest neighbors
+In R, we can use the `tidymodels` package \index{tidymodels} not only to perform $K$-nearest neighbors
 classification, but also to assess how well our classification worked. 
 Let's work through an example of how to use tools from `tidymodels` to evaluate a classifier
  using the breast cancer data set from the previous chapter.
 We begin the analysis by loading the packages we require,
 reading in the breast cancer data,
-and then making a quick scatter plot visualization of
+and then making a quick scatter plot visualization \index{visualization!scatter} of
 tumor cell concavity versus smoothness colored by diagnosis in Figure \@ref(fig:06-precode).
 You will also notice that we set the random seed here at the beginning of the analysis
 using the `set.seed` function, as described in Section \@ref(randomseeds).
@@ -204,12 +205,12 @@ training data set) and getting an accurate evaluation of its performance (by
 using a larger test data set). Here, we will use 75% of the data for training,
 and 25% for testing.  
 
-The `initial_split` function from `tidymodels` handles the procedure of splitting
+The `initial_split` function \index{tidymodels!initial\_split} from `tidymodels` handles the procedure of splitting
 the data for us. It also applies two very important steps when splitting to ensure
 that the accuracy estimates from the test data are reasonable. First, it
-**shuffles** the data before splitting, which ensures that any ordering present
+**shuffles** the \index{shuffling} data before splitting, which ensures that any ordering present
 in the data does not influence the data that ends up in the training and testing sets.
-Second, it **stratifies** the data by the class label, to ensure that roughly
+Second, it **stratifies** the \index{stratification} data by the class label, to ensure that roughly
 the same proportion of each class ends up in both the training and testing sets. For example,
 in our data set, roughly 63% of the
 observations are from the benign class (`B`), and 37% are from the malignant class (`M`),
@@ -242,7 +243,7 @@ glimpse(cancer_train)
 glimpse(cancer_test)
 ```
 
-We can see from `glimpse` in the code above that the training set contains `r nrow(cancer_train)`
+We can see from `glimpse` in \index{glimpse} the code above that the training set contains `r nrow(cancer_train)`
 observations, while the test set contains `r nrow(cancer_test)` observations. This corresponds to
 a train / test split of 75% / 25%, as desired. Recall from Chapter \@ref(classification)
 that we use the `glimpse` function to view data with a large number of columns,
@@ -254,7 +255,7 @@ train_prop <- cancer_train |>
   summarize(proportion = n()/nrow(cancer_train))
 ```
 
-We can use `group_by` and `summarize` to find the percentage of malignant and benign classes 
+We can use `group_by` and `summarize` to \index{group\_by}\index{summarize} find the percentage of malignant and benign classes 
 in `cancer_train` and we see about `r round(filter(train_prop, Class == "B")$proportion, 2)*100`% of the training
 data are benign and `r round(filter(train_prop, Class == "M")$proportion, 2)*100`% 
 are malignant indicating that our class proportions were roughly preserved when we split the data.
@@ -279,7 +280,7 @@ our test data does not influence any aspect of our model training. Once we have
 created the standardization preprocessor, we can then apply it separately to both the
 training and test data sets.
 
-Fortunately, the `recipe` framework from `tidymodels` helps us handle
+Fortunately, the `recipe` framework from `tidymodels` helps us handle \index{recipe}\index{recipe!step\_scale}\index{recipe!step\_center}
 this properly. Below we construct and prepare the recipe using only the training
 data (due to `data = cancer_train` in the first line).
 
@@ -319,7 +320,7 @@ knn_fit
 ### Predict the labels in the test set
 
 Now that we have a $K$-nearest neighbors classifier object, we can use it to
-predict the class labels for our test set.  We use the `bind_cols` to add the
+predict the class labels for our test set.  We use the `bind_cols` \index{bind\_cols} to add the
 column of predictions to the original test data, creating the
 `cancer_test_predictions` data frame.  The `Class` variable contains the true
 diagnoses, while the `.pred_class` contains the predicted diagnoses from the
@@ -333,7 +334,7 @@ cancer_test_predictions
 
 ### Compute the accuracy
 
-Finally we can assess our classifier's accuracy. To do this we use the `metrics` function
+Finally we can assess our classifier's accuracy. To do this we use the `metrics` function \index{tidymodels!metrics}
 from `tidymodels` to get the statistics about the quality of our model, specifying
 the `truth` and `estimate` arguments:
 
@@ -385,7 +386,7 @@ We now know that the classifier was `r round(100*cancer_acc_1$.estimate,0)`% acc
 on the test data set. That sounds pretty good!... Wait, *is* it good? 
 Or do we need something higher?
 
-In general, what a *good* value for accuracy is depends on the application.
+In general, what a *good* value for accuracy \index{accuracy!assessment} is depends on the application.
  For instance, suppose you are predicting whether a tumor is benign or malignant
  for a type of tumor that is benign 99% of the time. It is very easy to obtain 
  a 99% accuracy just by guessing benign for every observation. In this case, 
@@ -400,7 +401,7 @@ expert diagnosis. This is why it is important not only to look at accuracy, but
 also the confusion matrix.
 
 However, there is always an easy baseline that you can compare to for any
-classification problem: the *majority classifier*. The majority classifier
+classification problem: the *majority classifier*. The majority classifier \index{classification!majority}
 *always* guesses the majority class label from the training data, regardless of
 the predictor variables' values.  It helps to give you a sense of
 scale when considering accuracies. If the majority classifier obtains a 90%
@@ -444,7 +445,8 @@ for the application.
 ## Tuning the classifier
 
 The vast majority of predictive models in statistics and machine learning have
-*parameters*. A *parameter* is a number you have to pick in advance that determines
+*parameters*. A *parameter* \index{parameter}\index{tuning parameter|see{parameter}}
+is a number you have to pick in advance that determines
 some aspect of how the model behaves. For example, in the $K$-nearest neighbors
 classification algorithm, $K$ is a parameter that we have to pick
 that determines how many neighbors participate in the class vote. 
@@ -470,7 +472,7 @@ classifier using only the training data. If this is possible, then we can compar
 the classifier's performance for different values of $K$&mdash;and pick the best&mdash;using 
 only the training data. As suggested at the beginning of this section, we will
 accomplish this by splitting the training data, training on one subset, and evaluating
-on the other. The subset of training data used for evaluation is often called the **validation set**.
+on the other. The subset of training data used for evaluation is often called the **validation set**. \index{validation set}
 
 There is, however, one key difference from the train/test split
 that we performed earlier. In particular, we were forced to make only a *single split*
@@ -572,7 +574,7 @@ classifier's accuracy; this has the effect of reducing the influence of any one
 In practice, we don't use random splits, but rather use a more structured
 splitting procedure so that each observation in the data set is used in a
 validation set only a single time. The name for this strategy is called
-**cross-validation**.  In **cross-validation**, we split our **overall training
+**cross-validation**.  In **cross-validation**, \index{cross-validation} we split our **overall training
 data** into $C$ evenly-sized chunks. Then, iteratively use $1$ chunk as the
 **validation set** and combine the remaining $C-1$ chunks 
 as the **training set**. 
@@ -586,7 +588,7 @@ knitr::include_graphics("img/cv.png")
 ```
 
 To perform 5-fold cross-validation in R with `tidymodels`, we use another
-function: `vfold_cv`. This function splits our training data into `v` folds
+function: `vfold_cv`. \index{tidymodels!vfold\_cv}\index{cross validation!vfold\_cv} This function splits our training data into `v` folds
 automatically. We set the `strata` argument to the categorical label variable
 (here, `Class`) to ensure that the training and validation subsets contain the
 right proportions of each category of observation.
@@ -594,7 +596,7 @@ right proportions of each category of observation.
 cancer_vfold <- vfold_cv(cancer_train, v = 5, strata = Class)
 cancer_vfold
 ```
-Then, when we create our data analysis workflow, we use the `fit_resamples` function
+Then, when we create our data analysis workflow, we use the `fit_resamples` function \index{cross validation!fit\_resamples}\index{tidymodels!fit\_resamples}
 instead of the `fit` function for training. This runs cross-validation on each
 train/validation split. 
 ```{r 06-vfold-workflow-seed, echo = FALSE, warning = FALSE, message = FALSE}
@@ -616,7 +618,7 @@ knn_fit <- workflow() |>
 knn_fit
 ```
 
-The `collect_metrics` function is used to aggregate the *mean* and *standard error*
+The `collect_metrics` \index{tidymodels!collect\_metrics}\index{cross validation!collect\_metrics} function is used to aggregate the *mean* and *standard error*
 of the classifier's validation accuracy across the folds. You will find results
 related to the accuracy in the row with `accuracy` listed under the `.metric` column. 
 You should consider the mean (`mean`) to be the estimated accuracy, while the standard 
@@ -680,7 +682,7 @@ knn_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = tune()) |>
   set_engine("kknn") |>
   set_mode("classification")
 ```
-Then instead of using `fit` or `fit_resamples`, we will use the `tune_grid` function
+Then instead of using `fit` or `fit_resamples`, we will use the `tune_grid` function \index{cross validation!tune\_grid}\index{tidymodels!tune\_grid}
 to fit the model for each value in a range of parameter values. 
 In particular, we first create a data frame with a `neighbors`
 variable that contains the sequence of values of $K$ to try; below we create the `k_vals`
@@ -769,7 +771,7 @@ accuracy_vs_k_lots <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
 accuracy_vs_k_lots
 ```
 
-**Underfitting:** What is actually happening to our classifier that causes
+**Underfitting:** \index{underfitting!classification} What is actually happening to our classifier that causes
 this? As we increase the number of neighbors, more and more of the training
 observations (and those that are farther and farther away from the point) get a
 "say" in what the class of a new observation is. This causes a sort of
@@ -781,7 +783,7 @@ regardless of what the new observation looks like. In general, if the model
 *isn't influenced enough* by the training data, it is said to **underfit** the
 data.
 
-**Overfitting:** In contrast, when we decrease the number of neighbors, each
+**Overfitting:** \index{overfitting!classification} In contrast, when we decrease the number of neighbors, each
 individual data point has a stronger and stronger vote regarding nearby points.
 Since the data themselves are noisy, this causes a more "jagged" boundary
 corresponding to a *less simple* model.  If you take this case to the extreme,
@@ -852,6 +854,7 @@ knitr::include_graphics("img/train-test-overview.jpeg")
 ```
 
 The overall workflow for performing $K$-nearest neighbors classification using `tidymodels` is as follows:
+\index{tidymodels}\index{recipe}\index{cross-validation}\index{K-nearest neighbors!classification}\index{classification}
 
 1. Use the `initial_split` function to split the data into a training and test set. Set the `strata` argument to the class label variable. Put the test set aside for now.
 2. Use the `vfold_cv` function to split up the training data for cross validation.
@@ -890,7 +893,7 @@ variables from your data will be treated as predictor variables. Technically, yo
 anything from using a single predictor variable to using every variable in your
 data; the $K$-nearest neighbors algorithm accepts any number of
 predictors. However, it is **not** the case that using more predictors always
-yields better predictions! In fact, sometimes including irrelevant predictors can
+yields better predictions! In fact, sometimes including irrelevant predictors \index{irrelevant predictors} can
 actually negatively affect classifier performance.
 
 ### The effect of irrelevant predictors
@@ -1058,7 +1061,8 @@ this chapter to find out where you can learn more about variable selection, incl
 
 The first idea you might think of for a systematic way to select predictors
 is to try all possible subsets of predictors and then pick the set that results in the "best" classifier.
-This procedure is indeed a well-known variable selection method referred to as *best subset selection*. 
+This procedure is indeed a well-known variable selection method referred to 
+as *best subset selection*. \index{variable selection!best subset}\index{predictor selection|see{variable selection}}
 In particular, you
 
 1. create a separate model for every possible subset of predictors
@@ -1080,7 +1084,7 @@ So although it is a simple method, best subset selection is usually too computat
 expensive to use in practice.
 
 Another idea is to iteratively build up a model by adding one predictor variable 
-at a time. This method&mdash;known as *forward selection*&mdash;is also widely
+at a time. This method&mdash;known as *forward selection*&mdash;is also widely \index{variable selection!forward}
 applicable and fairly straightforward. It involves the following steps:
 
 1. start with a model having no predictors
@@ -1226,7 +1230,7 @@ as meaningful predictors are added, the estimated accuracy increases substantial
 variables, the accuracy either exhibits small fluctuations or decreases as the model attempts to tune the number
 of neighbors to account for the extra noise. In order to pick the right model from the sequence, you have 
 to balance high accuracy and model simplicity (i.e., having fewer predictors and a lower chance of overfitting). The 
-way to find that balance is to look for the *elbow*
+way to find that balance is to look for the *elbow* \index{variable selection!elbow method}
 in Figure \@ref(fig:06-fwdsel-3), i.e., the place on the plot where the accuracy stops increasing dramatically and
 levels off or begins to decrease. The elbow in Figure \@ref(fig:06-fwdsel-3) appears to occur at the model with 
 3 predictors; after that point the accuracy levels off. So here the right trade-off of accuracy and number of predictors
