--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -175,6 +175,7 @@ Sacramento real estate data set.
 
 As usual, we start by loading packages, setting the seed, loading data, and putting some test data away in a lock box that we
 can come back to after we choose our final model. Let's take care of that now.
+\index{seed!set.seed}
 
 ```{r 08-test-train-split}
 library(tidyverse)
