--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -84,6 +84,7 @@ a realtor advise a client as to whether the price of a particular listing
 is fair, or perhaps how to set the price of a new listing.
 We begin the analysis by loading and examining the data, and setting the seed value.
 
+\index{seed!set.seed}
 ```{r 07-load, message = FALSE}
 library(tidyverse)
 library(tidymodels)
@@ -102,6 +103,7 @@ the data as a scatter plot where we place the predictor variable
 (house size) on the x-axis, and we place the target/response variable that we
 want to predict (sale price) on the y-axis.
 \index{ggplot!geom\_point}
+\index{visualization!scatter}
 
 ```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square feet)"}
 eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
@@ -125,7 +127,7 @@ predict the former.
 
 Much like in the case of classification, we can use a K-nearest
 neighbours-based \index{K-nearest neighbours!regression} approach in regression to make predictions. Let's take a small
-sample of the data above and walk through how K-nearest neighbours (knn) works
+sample of the data above and walk through how K-nearest neighbours (K-NN) works
 in a regression context before we dive in to creating our model and assessing
 how well it predicts house sale price. This subsample is taken to allow us to
 illustrate the mechanics of KNN regression with a few data points; later in
@@ -221,6 +223,7 @@ As usual, we must start by putting some test data away in a lock box that we
 will come back to only after we choose our final model. Let's take care of that
 now. Note that for the remainder of the chapter we'll be working with the
 entire Sacramento data set, as opposed to the smaller sample of 30 points above.
+\index{training data}
 \index{test data}
 
 ```{r 07-test-train-split}
@@ -340,6 +343,7 @@ The use of `set_mode("regression")` essentially
 for tuning and evaluation.
 Then we create a 5-fold cross validation object, and put the recipe and model specification together
 in a workflow.
+\index{tidymodels}\index{recipe}\index{workflow}
 
 ```{r 07-choose-k-knn}
 sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) |>
@@ -367,6 +371,7 @@ is beyond the scope of this chapter; but roughly, if your estimated mean is 100,
 error is 1,000, you can expect the *true* RMSPE to be somewhere roughly between 99,000 and 101,000 (although it may
 fall outside this range). You may ignore the other columns in the metrics data frame,
 as they do not provide any additional insight.
+\index{cross validation!collect\_metrics}
 
 ```{r 07-choose-k-knn-results}
 
