--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -126,7 +126,7 @@ predict the former.
 ## K-nearest neighbours regression
 
 Much like in the case of classification, we can use a K-nearest
-neighbours-based \index{K-nearest neighbours!regression} approach in regression to make predictions. Let's take a small
+neighbours-based \index{K-nearest neighbors!regression} approach in regression to make predictions. Let's take a small
 sample of the data above and walk through how K-nearest neighbours (K-NN) works
 in a regression context before we dive in to creating our model and assessing
 how well it predicts house sale price. This subsample is taken to allow us to
@@ -602,8 +602,8 @@ on the quality of predictions. Fortunately, we can use the predictor selection
 algorithm from the classification chapter in KNN regression as well.
 As the algorithm is the same, we will not cover it again in this chapter.
 
-We will now demonstrate a multivariate KNN regression analysis of the 
-Sacramento real estate data using `tidymodels`. This time we will use
+We will now demonstrate a multivariate KNN regression \index{K-nearest neighbors!multivariate regression} analysis of the 
+Sacramento real estate \index{Sacramento real estate} data using `tidymodels`. This time we will use
 house size (measured in square feet) as well as number of bedrooms as our
 predictors, and continue to use house sale price as our outcome/target variable
 that we are trying to predict.
