--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -156,7 +156,7 @@ small_plot +
 
 ## Linear regression in R
 
-We can perform simple linear regression in R using `tidymodels` in a
+We can perform simple linear regression in R using `tidymodels` \index{tidymodels} in a
 very similar manner to how we performed KNN regression. 
 To do this, instead of creating a `nearest_neighbor` model specification with
 the `kknn` engine, we use a `linear_reg` model specification
@@ -166,7 +166,7 @@ Below we illustrate how we can use the usual `tidymodels` workflow to predict ho
 price given house size using a simple linear regression approach using the full
 Sacramento real estate data set.
 
-> An additional difference that you will notice below is that we do not standardize
+> An additional difference that you will notice below is that we do not standardize \index{standardization}
 > (i.e., scale and center) our predictors. In K-nearest neighbours models, recall that 
 > the model fit changes depending on whether we standardize first or not. In linear regression,
 > standardization does not affect the fit (it *does* affect the coefficients in the equation, though!).
@@ -212,7 +212,9 @@ This means that the equation of the line of best fit is
 $$\text{house sale price} = `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)` + `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`\cdot (\text{house size}).$$
 In other words, the model predicts that houses 
 start at \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), big.mark=",", nsmall=0, scientific=FALSE)` for 0 square feet, and that
-every extra square foot increases the cost of the house by \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`. Finally, we predict on the test data set to assess how well our model does:
+every extra square foot increases the cost of 
+the house by \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`. Finally, 
+we predict on the test data set to assess how well our model does:
 
 ```{r 08-assessFinal}
 lm_test_results <- lm_fit |>
@@ -222,7 +224,7 @@ lm_test_results <- lm_fit |>
 lm_test_results
 ```
 
-Our final model's test error as assessed by RMSPE
+Our final model's test error as assessed by RMSPE \index{RMSPE}
 is `r format(round(lm_test_results |> filter(.metric == 'rmse') |> pull(.estimate)), big.mark=",", nsmall=0, scientific=FALSE)`. 
 Remember that this is in units of the target/response variable, and here that
 is US Dollars (USD). Does this mean our model is "good" at predicting house
@@ -250,7 +252,7 @@ lm_plot_final
 ```
 
 We can extract the coefficients from our model by accessing the
-fit object that is output by the `fit` function; we first have to extract
+fit object that is output by the `fit` \index{tidymodels!fit} function; we first have to extract
 it from the workflow using the `pull_workflow_fit` function, and then apply
 the `tidy` function to convert the result into a data frame:
 
@@ -264,7 +266,7 @@ coeffs
 ## Comparing simple linear and KNN regression
 
 Now that we have a general understanding of both simple linear and KNN
-regression, we can start to compare and contrast these methods as well as the
+regression, we \index{regression!comparison of methods} can start to compare and contrast these methods as well as the
 predictions made by them. To start, let's look at the visualization of the
 simple linear regression model predictions for the Sacramento real estate data
 (predicting price from house size) and the "best" KNN regression model
@@ -343,7 +345,7 @@ There can however also be a disadvantage to using a simple linear regression
 model in some cases, particularly when the relationship between the target and
 the predictor is not linear, but instead some other shape (e.g. curved or oscillating). In 
 these cases the prediction model from a simple linear regression
-will underfit (have high bias), meaning that model/predicted values does not
+will underfit \index{underfitting!regression} (have high bias), meaning that model/predicted values does not
 match the actual observed values very well. Such a model would probably have a
 quite high RMSE when assessing model goodness of fit on the training data and
 a quite high RMPSE when assessing model prediction quality on a test data
@@ -362,7 +364,7 @@ linear regression model.
 Finally, note that the KNN regression model becomes "flat"
 at the left and right boundaries of the data, while the linear model
 predicts a constant slope. Predicting outside the range of the observed
-data is known as *extrapolation*; KNN and linear models behave quite differently
+data is known as *extrapolation*; \index{extrapolation} KNN and linear models behave quite differently
 when extrapolating. Depending on the application, the flat
 or constant slope trend may make more sense. For example, if our housing
 data were slightly different, the linear model may have actually predicted 
@@ -375,7 +377,7 @@ so the "flat" extrapolation of KNN likely does not match reality.
 
 As in KNN classification and KNN regression, we can move beyond the simple
 case of only one predictor to the case with multiple predictors,
-known as *multivariate linear regression*. 
+known as *multivariate linear regression*. \index{regression!multivariate linear}\index{regression!multivariate linear equation|see{plane equation}}
 To do this, we follow a very similar approach to what we did for
 KNN regression: we just add more predictors to the model formula in the 
 recipe. But recall that we do not need to use cross-validation to choose any parameters,
@@ -386,7 +388,7 @@ better. But because the same predictor selection
 algorithm from the classification chapter extends to the setting of linear regression,
 it will not be covered again in this chapter.
 
-We will demonstrate multivariate linear regression using the Sacramento real estate 
+We will demonstrate multivariate linear regression using the Sacramento real estate  \index{Sacramento real estate}
 data with both house size
 (measured in square feet) as well as number of bedrooms as our predictors, and
 continue to use house sale price as our response variable. We will start by 
@@ -464,7 +466,7 @@ mcoeffs <- mlm_fit %>%
              tidy()
 mcoeffs
 ```
-And then use those slopes to write a mathematical equation to describe the prediction plane:
+And then use those slopes to write a mathematical equation to describe the prediction plane: \index{plane equation}
 
 $$\text{house sale price} = \beta_0 + \beta_1\cdot(\text{house size}) + \beta_2\cdot(\text{number of bedrooms}),$$
 where:
@@ -502,7 +504,7 @@ lm_mult_test_results
 ```
 
 
-We obtain an RMSPE for the multivariate linear regression model 
+We obtain an RMSPE \index{RMSPE} for the multivariate linear regression model 
 of `r format(lm_mult_test_results |> filter(.metric == 'rmse') |> pull(.estimate), big.mark=",", nsmall=0, scientific = FALSE)`. This prediction error
 is less than the prediction error for the multivariate KNN regression model,
 indicating that we should likely choose linear regression for predictions of
@@ -523,7 +525,7 @@ illustrate their impact on predictions.
 
 ### Outliers
 
-Outliers are data points that do not follow the usual pattern of the rest of the data.
+Outliers \index{outliers} are data points that do not follow the usual pattern of the rest of the data.
 In the setting of linear regression, these are points that
  have a vertical distance to the line of best fit that is either much higher or much lower 
 than you might expect based on the rest of the data. The problem with outliers is that
@@ -585,7 +587,7 @@ lm_plot_outlier_large
 ### Multicollinearity
 
 The second, and much more subtle, issue can occur when performing multivariate
-linear regression.  In particular, if you include multiple predictors that are
+linear regression.  In particular, if you include multiple predictors that are \index{colinear}\index{multicolinear|see{colinear}}
 strongly linearly related to one another, the coefficients that describe the
 plane of best fit can be very unreliable&mdash;small changes to the data can
 result in large changes in the coefficients. Consider an extreme example using
@@ -695,7 +697,7 @@ curve_plt
 Instead of trying to predict the response `y` using a linear regression on `x`,
 we might have some scientific background about our problem to suggest that `y`
 should be a cubic function of `x`. So before performing regression,
-we might *create a new predictor variable* `z` using the `mutate` function:
+we might *create a new predictor variable* `z` using the `mutate` function: \index{predictor design}
 ```{r 08-predictor-design-3, message = FALSE, warning = FALSE}
 df <- df |>
         mutate(z = x^3)
@@ -720,7 +722,7 @@ curve_plt2
  
 The process of
 transforming predictors (and potentially combining multiple predictors in the process)
-is known as *feature engineering*. In real data analysis
+is known as *feature engineering*. \index{feature engineering|see{predictor design}} In real data analysis
 problems, you will need to rely on
 a deep understanding of the problem---as well as the wrangling tools 
 from previous chapters---to engineer useful new features that improve
